# otus

./: CMakeLists.txt
.github/workflows/: release.yml
lesson_1/: CMakeLists.txt  helloworld.cpp  test_version.cpp  version.h.in
